# crewai-independent-execution

./: .gitignore  README.md  digest.txt  pyproject.toml
src/independent_crew/: crew.py  main.py  run_agent.py  run_task.py
src/independent_crew/config/: agents.yaml  tasks.yaml
src/independent_crew/tools/: __init__.py  custom_tool.py
