[project]
name = "independent_crew"
version = "0.1.0"
description = "independent_crew using crewAI"
authors = [{ name = "Alexandros Pappas", email = "apappascs@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
independent_crew = "independent_crew.main:run"
run_crew = "independent_crew.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
